--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -180,6 +180,17 @@
     <div>{{gradeLabel}}: <span class="grade-number">{{grade}}{{^grade}}-{{/grade}}</span>/100</div>
 </script>
 
+<script id="t-c-select" type="text/x-handlebars">
+    <div class="input-field select-wrap">
+        <select id="{{selectId}}">
+            {{#options}}
+                <option value="{{value}}" {{#isSelected}}selected{{/isSelected}}>{{label}}</option>
+            {{/options}}
+        </select>
+        <label>{{selectLabel}}</label>
+    </div>
+</script>
+
 
 <!-- Courses page -->
 
@@ -363,6 +374,21 @@
         <button id="testing-submit" class="waves-effect waves-light btn"><ez-btn-content>{{doTestLabel}}</ez-btn-content></button>
     </div>
 </script>
+
+
+<!-- Grade table page -->
+<script id="t-c-grades-card" type="text/x-handlebars">
+    <div class="title-wrap">
+        <h2 class="title">{{title}}</h2>
+    </div>
+    <div class="card">
+        <div class="card-content">
+            <ez-dst id="{{groupSelectDstId}}"></ez-dst>
+            <ez-dst id="{{tableDstId}}"></ez-dst>
+        </div>
+    </div>
+</script>
+
 
 
 
