wui ezcoll trailer to inside coll

--- a/wui/static/ezcollcustom.html
+++ b/wui/static/ezcollcustom.html
@@ -143,17 +143,20 @@
         }
 
         ez-coll-trailer {
-            margin-right: -25px;
             display: flex;
         }
 
         ez-coll-expand-btn {
-            padding-top: 8px;
+            padding-top: 11px;
             visibility: hidden;
         }
 
         ez-coll-item:hover ez-coll-expand-btn {
             visibility: visible;
+        }
+
+        ez-coll-expand-btn i.material-icons {
+            font-size: 18px;
         }
 
     </style>
